[package]
name = "followme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
pin-project-lite = "0.2.8"
tokio = { version = "1.17.0", features = ["fs", "time", "rt", "io-util", "macros", "rt-multi-thread"] }
